# chatbot-with-cloud

./: .gitignore
client/: package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx  page__.tsx
client/src/app/manuals/: page.tsx
client/src/components/: Navbar.tsx
client/src/components/chat/: ChatContainer.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx
client/src/components/manualsTable/: ManualDisplay.tsx  PDFDisplay.tsx
client/src/services/: axiosInstance.js
client/src/types/: chat.ts  manuals.ts
infra/docker/: README.md  docker-compose.yml
infra/terraform/: main.tf  outputs.tf  readme.tf  terraform.tfvars  variables.tf
infra/terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3-static/: main.tf  outputs.tf
infra/terraform/modules/vpc/: main.tf  outputs.tf
server/: .gitignore  README.md  main.py  pyproject.toml
server/database/: db_session.py
server/database/alembic/: __init__.py  alembic.ini
server/database/alembic/migrations/: env.py  script.py.mako
server/database/alembic/migrations/versions/: 19515b927de4_init.py  758cf018feff_init.py
server/database/models/: __init__.py  chunk.py  manual.py
server/modules/: asking_cloud.py  embedding_module.py
server/repositories/: chunk_repository.py  manual_repository.py
server/test/: README.md  conftest.py
server/test/funcionality/: test_asking_cloud.py  test_extract_text.py
server/tools/: pdf_procesor.py
